<resources>
    <string name="app_name">Sri Divya Jyothi</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="welcome_pivotalsoft">Welcome Sri Divya Jyothi Enterprises !</string>
    <string name="_3_0">4.8</string>
    <string name="_12354_reviews">(14 Reviews)</string>
    <string name="pivotalsoft_seller_gmail_com">sridivyajyothienterprises@gmail.com</string>
    <string name="your_ratings">Your Ratings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="customGallery">Custom Gallery</string>
    <string name="mainTitle">Select MultipleImages From Gallery</string>
    <string name="openCustomGallery">Open Custom Gallery</string>
    <string name="selectedImages">Selected Images will display below</string>
    <string name="shop_name">Shop Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="shopping_cost_inr">Shopping Cost (INR)</string>
    <string name="pincode">Pin Code</string>
    <string name="address_field_1">Address Field 1</string>
    <string name="address_field_2">Address Field 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="add_description">Add Description</string>
    <string name="save_and_continue">save and continue</string>
    <string name="cst">CST</string>
    <string name="pan">PAN</string>
    <string name="tin">TIN</string>
    <string name="vat">VAT</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="bank_city">Bank City</string>
    <string name="upload_scanned_copy_of_the_following">Upload Scanned copy of the following</string>
    <string name="i_have_read_and_agree_to_terms_of_services_and_privacy_policy">I have read and agree to terms of services and privacy policy</string>
    <string name="upload_cst_image">UPLOAD CST IMAGE</string>
    <string name="upload_pan_image">UPLOAD PAN IMAGE</string>
    <string name="upload_cheque_image">UPLOAD CHEQUE IMAGE</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="local_seo">Local Seo</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_on_whatsapp">Share on Whatsapp</string>
    <string name="services">Services</string>
    <string name="profile">Profile</string>
    <string name="enquiries">Enquiries</string>
    <string name="products">Products</string>
    <string name="statistics">Statistics</string>
    <string name="stores">Stores</string>
    <string name="campaigns">Campaigns</string>
    <string name="orders">Orders</string>
    <string name="categories">Categories</string>
    <string name="offers">Offers</string>
    <string name="customers">Customers</string>
    <string name="stocks">Stocks</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="working_timings">Working Timings</string>
    <string name="working_days">Working Days</string>
    <string name="launch_time">Launch Time</string>

    <integer name="google_play_services_version">10298000</integer>
</resources>
