<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_pivotalsoft"
        android:textColor="@color/whiteColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="52dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/pivotalsoft_seller_gmail_com"
            android:textColor="@color/whiteColor"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



    </RelativeLayout>

<View
    android:layout_width="50dp"
    android:layout_height="2dp"
    android:background="@color/whiteColor"
    android:layout_marginTop="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:id="@+id/reviewsLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_ratings"
            android:textSize="16sp"
            android:textColor="@color/whiteColor"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_0"
            android:layout_centerVertical="true"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <RatingBar
            android:id="@+id/ratingbar"
            style="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:numStars="5"
            android:rating="4.8"
            android:stepSize="0.5"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/textView5"
            android:layout_toRightOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ratingbar"
            android:layout_toRightOf="@+id/ratingbar"
            android:text="@string/_12354_reviews"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginLeft="5dp"/>
    </RelativeLayout>
</LinearLayout>
