<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.pivotalsoft.get5mseller.Fragments.BusinessInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/layerbackground"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_vector_store"
                android:layout_below="@+id/imageView5"
                android:layout_alignLeft="@+id/imageView5"
                android:layout_alignStart="@+id/imageView5"
                android:layout_marginTop="18dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView8"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_toEndOf="@+id/imageView8"
                android:layout_toRightOf="@+id/imageView8"
                android:text="TEJAS BOUTIQUE"
                android:textColor="@color/whiteColor"
                android:textSize="20dp"
                android:textStyle="bold"/>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/whiteColor"
            android:layout_margin="10dp"
            android:padding="10dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/shop_name"
                    android:textColorHint="@color/textHintColor"
                    android:paddingLeft="10dp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:hint="@string/mobile_number"
                    android:textColorHint="@color/textHintColor"
                    android:paddingLeft="10dp"/>

            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/textHintColor"
                    android:hint="@string/email_id"
                    android:paddingLeft="10dp"/>

            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/textHintColor"
                    android:hint="@string/shopping_cost_inr"
                    android:paddingLeft="10dp"/>

            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:textColorHint="@color/textHintColor"
                    android:hint="@string/pincode"
                    android:paddingLeft="10dp"/>

            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/textHintColor"
                    android:hint="@string/address_field_1"
                    android:paddingLeft="10dp"
                     />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <EditText
                    android:id="@+id/editText17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/textHintColor"
                    android:hint="@string/address_field_2"
                    android:paddingLeft="10dp"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/textHintColor"
                    android:hint="@string/city"
                    android:paddingLeft="10dp"/>

            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/textHintColor"
                    android:hint="@string/state"
                    android:paddingLeft="10dp"
                    />


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText20"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:textColorHint="@color/textHintColor"
                    android:hint="@string/add_description"
                    android:paddingLeft="10dp"
                    />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_and_continue"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/saveBtn"
            android:textColor="@color/whiteColor"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
