<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pivotalsoft.get5mseller.Fragments.OtherInfoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/whiteColor"
            android:layout_margin="10dp"
            android:padding="10dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etcst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/cst"
                    android:textColorHint="@color/textHintColor"
                    android:paddingLeft="10dp"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etpan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/pan"
                    android:textColorHint="@color/textHintColor"
                    android:paddingLeft="10dp"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/ettin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/tin"
                    android:textColorHint="@color/textHintColor"
                    android:paddingLeft="10dp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etvat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/vat"
                    android:textColorHint="@color/textHintColor"
                    android:paddingLeft="10dp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etBankaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/bank_account_number"
                    android:textColorHint="@color/textHintColor"
                    android:paddingLeft="10dp"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etBeneficiaryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/beneficiary_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/textHintColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etBankName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/bank_name"
                    android:textColorHint="@color/textHintColor"
                    android:paddingLeft="10dp"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etIfsccode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/ifsc_code"
                    android:textColorHint="@color/textHintColor"
                    android:paddingLeft="10dp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etBankCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/bank_city"
                    android:textColorHint="@color/textHintColor"
                    android:paddingLeft="10dp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editText12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="Bank State"
                    android:textColorHint="@color/textHintColor"
                    android:paddingLeft="10dp"
                    />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="10dp"
                android:background="@color/whiteColor"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:text="@string/upload_scanned_copy_of_the_following" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/upload_cst_image"
                        android:textColor="@color/colorPrimary"
                        android:textSize="8sp"/>

                    <ImageView
                        android:id="@+id/imageViewCst"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/textView17"
                        android:layout_marginTop="10dp"
                        android:scaleType="centerCrop"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_add_32dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/square_background"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/textView172"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/upload_pan_image"
                        android:textColor="@color/colorPrimary"
                        android:textSize="8sp"
                        />

                    <ImageView
                        android:id="@+id/imageViewPan"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/textView172"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_add_32dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/square_background"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp">


                    <TextView
                        android:id="@+id/textView171"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/upload_cheque_image"
                        android:textColor="@color/colorPrimary"
                        android:textSize="8sp"/>

                    <ImageView
                        android:id="@+id/imageViewCheque"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/textView171"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_add_32dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/square_background"/>

                </RelativeLayout>



            </LinearLayout>


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/i_have_read_and_agree_to_terms_of_services_and_privacy_policy"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSave"
            android:text="Save"
            android:textColor="@color/whiteColor"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            />


        </LinearLayout>

    </LinearLayout>



</android.support.v4.widget.NestedScrollView>
